content padding removal - use body class

--- a/index.html
+++ b/index.html
@@ -89,7 +89,17 @@
         </div>
         
 		<footer id="footer">
-        
+        	<nav>
+        		<h6 class="hide">site map</h6>
+        		<ul id="sitemap" class="clearfix">
+	        		<li><a href="">List item</a></li>
+	        		<li><a href="">List item</a></li>
+	        		<li><a href="">List item</a></li>
+	        		<li><a href="">List item</a></li>
+	        		<li><a href="">List item</a></li>
+	        		<li><a href="">List item</a></li>
+        		</ul>
+        	</nav>
         </footer>
 
 
