--- a/index.html
+++ b/index.html
@@ -92,14 +92,94 @@
         	<nav>
         		<h6 class="hide">site map</h6>
         		<ul id="sitemap" class="clearfix">
-	        		<li><a href="">List item</a></li>
-	        		<li><a href="">List item</a></li>
-	        		<li><a href="">List item</a></li>
-	        		<li><a href="">List item</a></li>
-	        		<li><a href="">List item</a></li>
-	        		<li><a href="">List item</a></li>
+	        		<li>
+	        			<a href="">About us</a>
+	        			<ul>
+	        				<li><a href="">People</a></li>
+	        				<li><a href="">Partners</a></li>
+	        				<li><a href="">Advocacy</a></li>
+	        				<li><a href="">Our heritage</a></li>
+	        			</ul>
+	        		</li>
+	        		<li>
+	        			<a href="">How we help</a>
+	        			<ul>
+	        				<li><a href="">Individual tailored support</a></li>
+	        				<li><a href="">Performing live</a></li>
+	        				<li><a href="">Case studies</a></li>
+	        				<li><a href="">Resources</a></li>
+	        				<li><a href="">Need extra help?</a></li>
+	        			</ul>
+	        		</li>
+	        		<li>
+	        			<a href="">Our programmes</a>
+	        			<ul>
+	        				<li><a href="">Awards</a></li>
+	        				<li><a href="">Furthering talent</a></li>
+	        				<li><a href="">Music teachers’ support</a></li>
+	        				<li><a href="">Musical progressions</a></li>
+	        			</ul>
+	        		</li>
+	        		<li>
+	        			<a href="">Supporting AYM</a>
+	        			<ul>
+	        				<li><a href="">Appeals</a></li>
+	        				<li><a href="">Sponsor an award</a></li>
+	        				<li><a href="">AYM supporters</a></li>
+	        				<li><a href="">AYM alumni</a></li>
+	        				<li><a href="">AYM community</a></li>
+	        				<li><a href="">AYM projects</a></li>
+	        				<li><a href="">Donate now</a></li>
+	        			</ul>
+	        		</li>
+	        		<li>
+	        			<a href="">News &amp; Events</a>
+	        			<ul>
+	        				<li><a href="">News</a></li>
+	        				<li><a href="">Events calendar</a></li>
+	        				<li><a href="">Contributors blog</a></li>
+	        				<li><a href="">Media</a></li>
+	        			</ul>
+	        		</li>
+	        		<li>
+	        			<a href="">Young Musicians</a>
+	        			<ul>
+	        				<li><a href="">Gallery</a></li>
+	        			</ul>
+	        			<ul>
+	        				<li><a href="">AYM Angels</a></li>
+	        			</ul>
+	        			<ul>
+	        				<li><a href="">FAQs</a></li>
+	        				<li><a href="">Site Map</a></li>
+							<li><a href="">Privacy Policy</a></li>
+	        				<li><a href="">Terms &amp; Conditions</a></li>
+	        			</ul>
+	        		</li>
         		</ul>
+        		<div class="right-column">
+        			<p>
+        				<strong>Contact us</strong><br/>
+        				T. 011 7904 9906<br/>
+        				E. <a href="">enquiries@a-y-m.org.uk</a>
+        			</p>
+        			<p>
+        				<strong>Awards for Young Musicians</strong><br/>
+        				PO Box 2754<br/>
+						Bristol<br/>
+						BS4 9DA
+					</p>
+        			<p>
+        				Charity 1070994<br/> Company 3602851
+					</p>
+        		</div>
         	</nav>
+        	<section id="signoff">
+        		<h6>Awards for Young Musicians <a href="">©</a> 2013 &mdash; All Rights Reserved  |  AYM photos donated and © Edward Webb</h6>
+        		<div class="right-column">
+	        		<h6>Website by <a href="http://www.design-culture.co.uk/">Design Culture</a></h6>
+        		</div>
+        	</section>
         </footer>
 
 
