--- a/news.html
+++ b/news.html
@@ -112,51 +112,62 @@
 	        	    <section id="News">
                         <h2>News</h2>
                         <article>
-                            <img src="img/imgNews01.jpg" width="150" height="100" alt="News 01">
+                            <a href="#"><img src="img/imgNews01.jpg" width="150" height="100" alt="News 01"></a>
                             <div class="itemNews">
-                                <h2>A community of support: Volunteering in progress</h2>
+                                <a href="#"><h2>A community of support: Volunteering in progress</h2></a>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, quas, eligendi, at aliquid odio ipsum laboriosam ab magnam excepturi voluptatum mollitia temporibus distinctio corporis animi sit cum dolorum harum voluptas!</p>
-                                <span class="date">04.06.13</span>
+                                <p class="date">04.06.13</p>
                                 <a href="#" class="readMore"><span>read more</span></a>
                             </div>
                         </article>
                         <article>
-                            <img src="img/imgNews02.jpg" width="150" height="100" alt="News 02">
+                            <a href="#"><img src="img/imgNews02.jpg" width="150" height="100" alt="News 02"></a>
                             <div class="itemNews">
-                                <h2>A community of support: Volunteering in progress</h2>
+                                <a href="#"><h2>A community of support: Volunteering in progress</h2></a>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, quas, eligendi, at aliquid odio ipsum laboriosam ab magnam excepturi voluptatum mollitia temporibus distinctio corporis animi sit cum dolorum harum voluptas!</p>
-                                <span class="date">04.06.13</span>
+                                <p class="date">04.06.13</p>
                                 <a href="#" class="readMore"><span>read more</span></a>
                             </div>
                         </article>
                         <article>
-                            <img src="img/imgNews03.jpg" width="150" height="100" alt="News 03">
+                            <a href="#"><img src="img/imgNews03.jpg" width="150" height="100" alt="News 03"></a>
                             <div class="itemNews">
-                                <h2>A community of support: Volunteering in progress</h2>
+                                <a href="#"><h2>A community of support: Volunteering in progress</h2></a>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, quas, eligendi, at aliquid odio ipsum laboriosam ab magnam excepturi voluptatum mollitia temporibus distinctio corporis animi sit cum dolorum harum voluptas!</p>
-                                <span class="date">04.06.13</span>
+                                <p class="date">04.06.13</p>
                                 <a href="#" class="readMore"><span>read more</span></a>
                             </div>
                         </article>
                         <article>
-                            <img src="img/imgNews04.jpg" width="150" height="100" alt="News 04">
+                            <a href="#"><img src="img/imgNews04.jpg" width="150" height="100" alt="News 04"></a>
                             <div class="itemNews">
-                                <h2>A community of support: Volunteering in progress</h2>
+                                <a href="#"><h2>A community of support: Volunteering in progress</h2></a>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, quas, eligendi, at aliquid odio ipsum laboriosam ab magnam excepturi voluptatum mollitia temporibus distinctio corporis animi sit cum dolorum harum voluptas!</p>
-                                <span class="date">04.06.13</span>
+                                <p class="date">04.06.13</p>
                                 <a href="#" class="readMore"><span>read more</span></a>
                             </div>
                         </article>
                         <article>
-                            <img src="img/imgNews05.jpg" width="150" height="100" alt="News 05">
+                            <a href="#"><img src="img/imgNews05.jpg" width="150" height="100" alt="News 05"></a>
                             <div class="itemNews">
-                                <h2>A community of support: Volunteering in progress</h2>
+                                <a href="#"><h2>A community of support: Volunteering in progress</h2></a>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut, quas, eligendi, at aliquid odio ipsum laboriosam ab magnam excepturi voluptatum mollitia temporibus distinctio corporis animi sit cum dolorum harum voluptas!</p>
-                                <span class="date">04.06.13</span>
+                                <p class="date">04.06.13</p>
                                 <a href="#" class="readMore"><span>read more</span></a>
                             </div>
                         </article>
                     </section>
+                    
+                    <div id="Pagination">
+                        <p>
+                            <span>Page </span>
+                            <a href="">1</a><span>, </span>
+                            <a href="#">2</a><span>, </span>
+                            3<span>, </span>
+                            <a href="#">4</a><span>, </span>
+                            <a href="#">5</a>
+                        </p>
+                    </div>
 	        	</section>
 	        	
 	        	<aside id="RightSidebar">
