Semantic rework to news, single & gallery templates. Merge stylesheets.

--- a/front-page.html
+++ b/front-page.html
@@ -81,9 +81,9 @@
 						<li>
 							<a href="">How we help</a>
 							<ul>
-								<li><a href="">List Item long</a></li>
+								<li><a href="">List Item really really long</a></li>
 								<li><a href="">List Item</a></li>
-								<li><a href="">List Item really long</a></li>
+								<li><a href="">List Item really really really long</a></li>
 								<li><a href="">List Item</a></li>
 							</ul>
 						</li>
