Cycle plugin added

--- a/front-page.html
+++ b/front-page.html
@@ -107,6 +107,13 @@
 			        	</div>
 		                <img src="img/imgSlider01.jpg" alt="Slider">
 		        	</div>
+		        	<div class="slide">
+			        	<div class="slide-text">
+			        		<p>We believe that all musically talented young people – not just those from well off families – should have the opportunity to develop their talent.</p>
+			        		<p>That’s why we’re here – to help young people with exceptional potential from lower-income backgrounds.</p>
+			        	</div>
+		                <img src="img/imgSlider02.jpg" alt="Slider">
+		        	</div>
 		        </div>
 		        
 		        <header id="TopContent" class="clearfix featured-posts">
@@ -262,6 +269,16 @@
         <script>window.jQuery || document.write('<script src="js/core/jquery-1.10.1.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+<!--
+        <script type="text/javascript" src="http://cloud.github.com/downloads/malsup/cycle/jquery.cycle.all.latest.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $('#Slider').cycle({
+                    fx: 'fade' // choose your transition type, ex: fade, scrollUp, shuffle, etc...
+                });
+            });
+        </script>
+-->
 
 <!--	google analytics -->
         <script>
