Contact page template and style tweaks

--- a/front-page.html
+++ b/front-page.html
@@ -108,7 +108,7 @@
 		                <img src="img/imgSlider01.jpg" alt="Slider">
 		        	</div>
 		        	<div class="slide">
-			        	<div class="slide-text">
+			        	<div class="slide-text darkBG">
 			        		<p>We believe that all musically talented young people – not just those from well off families – should have the opportunity to develop their talent.</p>
 			        		<p>That’s why we’re here – to help young people with exceptional potential from lower-income backgrounds.</p>
 			        	</div>
